--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Brightcrest</title>
+        <meta charset="utf-8">
         <!-- inject:css -->
         <link rel="stylesheet" href="styles/style.css">
         <!-- endinject -->
@@ -9,20 +10,10 @@
         <!-- endinject -->
     </head>
     <body>
-        <p>
-            <!-- use v-link directive for navigation. -->
-            <a v-link="{ path: '/foo' }">Go to Foo</a>
-            <a v-link="{ path: '/bar' }">Go to Bar</a>
-
-            <router-view></router-view>
-        </p>
+        <div id="brightcrest"></div>
     </body>
     <!-- bower:js -->
-    
     <script src="/jquery/dist/jquery.js"></script>
-    <script src="/vue/dist/vue.js"></script>
-    <script src="/vue-router/dist/vue-router.js"></script>
-    <script src="/vue-resource/dist/vue-resource.js"></script>
     <script src="/materialize/bin/materialize.js"></script>
     <!-- endinject -->
     
