added clear method, everything is working fine

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
         <!-- bower:css -->
         <link rel="stylesheet" href="/materialize/bin/materialize.css">
         <!-- endinject -->
+        <link rel="stylesheet" type="text/css" href="sweetalert/dist/sweetalert.css">
     </head>
     <body>
         <div id="brightcrest"></div>
