--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/materialize/bin/materialize.css">
         <!-- endinject -->
         <link rel="stylesheet" type="text/css" href="sweetalert/dist/sweetalert.css">
+         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
         <div id="brightcrest"></div>
