--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Brightcrest</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- inject:css -->
         <link rel="stylesheet" href="styles/style.css">
         <!-- endinject -->
@@ -9,7 +10,7 @@
         <link rel="stylesheet" href="/materialize/bin/materialize.css">
         <!-- endinject -->
         <link rel="stylesheet" type="text/css" href="sweetalert/dist/sweetalert.css">
-         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     </head>
 
@@ -23,9 +24,11 @@
     <!-- endinject -->
     
     <script src="bundle.js"></script>
+    <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX8Zck-0CfJhDPSydYMTcVEIwdmHbQnm8&callback=bundle.initMap" async defer></script>-->
     
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+
 
 
    
