--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,11 @@
     
     <script src="bundle.js"></script>
     <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
+    <script src="http://leaflet.github.io/Leaflet.label/leaflet.label.js"></script>
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCX8Zck-0CfJhDPSydYMTcVEIwdmHbQnm8&callback=bundle.initMap" async defer></script>-->
     
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
-
+    <link rel="stylesheet" href="http://leaflet.github.io/Leaflet.label/leaflet.label.css" />
 
 
    
