improved search method

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <!-- bower:js -->
     <script src="/jquery/dist/jquery.js"></script>
     <script src="/materialize/bin/materialize.js"></script>
-    
+    <script src="/lib/autocomplete/jquery.autocomplete.min.js"></script>
     
     <!-- endinject -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
